--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.15.4",
+    "axios": "^0.21.1",
     "eslint-plugin-import": "^2.23.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -17,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-use-googlelogin": "^0.12.5",
+    "redux-saga": "^1.1.3",
     "sass": "^1.32.12",
     "web-vitals": "^1.1.1"
   },
